# OSaSP

./: CMakeLists.txt  Makefile  README.md  buffer.c  buffer.h  child  child.c  consumer.c  consumer.h  cpu_usage.sh  environment.txt  lab2  main  main.c  makefile  osisp  osisp_find  parent  parent.c  producer.c  producer.h  task_manager
client/: CMakeLists.txt  client.c  client.py  makefile  parser.py
client/requests/: request1  request2
genfile/: CMakeLists.txt  genfile  genfile.c  genfile.h  makefile  utils.h
graphics/: graphics.h
print_file/: CMakeLists.txt  makefile  print_file.c
processes/: processes.h
scripts/: build_client.sh  build_server.sh  run_all.sh  run_genfile.sh  run_print_file.sh  run_sort_index.sh  start_client.sh  start_server.sh
server/: CMakeLists.txt  handlers.c  handlers.h  handlers.py  makefile  parser.py  server.c  server.py  utilities.c  utilities.h
server/config/: config.json
sort_index/: CMakeLists.txt  makefile  sort_index  sort_index.c  sort_index.h  thread.c  thread.h  utils.h
structures/: structures.h
task1/: CMakeLists.txt  README.md  buffer.c  buffer.h  consumer.c  main.c  makefile  producer.c
task2/: CMakeLists.txt  README.md
task2/competition/: competition.c  makefile  utils.h
task2/genfile/: genfile.c
task2/scripts/: build_competition.sh  run_competition.sh  run_genfile.sh
utils/: utils.h
